--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 18:05:02 2018</p>
+         Last Run: Sun Nov 18 19:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "71",
-                 "73"
+                 "67",
+                 "69",
+                 "71"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "7",
-                 "7"
+                 "3",
+                 "3",
+                 "3"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 18:05:02 2018</p>
+         Last Run: Sun Nov 18 19:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -400,6 +400,221 @@
                  "47",
                  "44",
                  "41"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sun Nov 18 19:05:06 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Clear</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>2</td>
+                        <td>60</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>26</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>W</td>
+                        <td>22</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Clear</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>8</td>
+                        <td>55</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>21</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-4",
+                 "-3",
+                 "-2"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-1",
+                 "0",
+                 "1"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "2",
+                 "2",
+                 "8"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "60",
+                 "57",
+                 "55"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "26",
+                 "22",
+                 "21"
                ]
              }
            ]
