--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 20:05:02 2018</p>
+         Last Run: Sun Nov 18 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -46,7 +46,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -58,10 +58,10 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
+                        <td>10</td>
+                        <td>W</td>
                         <td>3</td>
                      </tr>
                   </tbody>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "69",
-                 "70"
+                 "67",
+                 "70",
+                 "69"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 20:05:02 2018</p>
+         Last Run: Sun Nov 18 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SSW</td>
@@ -261,9 +261,9 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SSW</td>
                         <td>44</td>
                      </tr>
@@ -273,7 +273,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "53",
-                 "56"
+                 "51",
+                 "54",
+                 "57"
                ]
              },
              {
@@ -439,7 +439,241 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 20:05:02 2018</p>
+         Last Run: Sun Nov 18 21:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 24, 2018 -  1:00PM til  2:30PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>6</td>
+                        <td>71</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>NE</td>
+                        <td>71</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>68</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>E</td>
+                        <td>63</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>63</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>E</td>
+                        <td>54</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>6</td>
+                        <td>63</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>ESE</td>
+                        <td>45</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-7",
+                 "-6",
+                 "-6",
+                 "-6"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-3",
+                 "-2",
+                 "-2",
+                 "-2"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "6",
+                 "6",
+                 "6",
+                 "6"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "71",
+                 "68",
+                 "63",
+                 "63"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "71",
+                 "63",
+                 "54",
+                 "45"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sun Nov 18 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -464,7 +698,7 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
@@ -476,7 +710,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>10</td>
                         <td>W</td>
@@ -499,12 +733,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -571,12 +805,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -601,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "59",
-                 "56",
+                 "60",
+                 "57",
                  "55"
                ]
              },
